# dragonfly

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  README.txt  build_develop.py  build_dist.py  build_docs.py  build_test.py  build_upload.py  ez_setup.py  main_test.py  parser.py  pyproject.toml  setup.cfg  setup.py  test_parser.py  test_requirements.txt  timer.py  version.txt
.github/workflows/: python-publish.yml
actions/: _generate_typeables.py  acstr.py  actionbase.py  actions.py  keyboard.py  typeables.py
documentation/: Makefile  _build_typeables.py  accessibility.txt  actionkey.txt  actions.txt  base_engine.txt  ccr.txt  changelog.txt  cli.txt  clipboard.txt  code_of_conduct.txt  code_style.txt  commit_messages.txt  compound.txt  conf.py  config.txt  context.txt  elements.txt  engines.txt  faq.txt  features.txt  grammar.txt  grammarclasses.txt  index.txt  installation.txt  introduction.txt  kaldi_engine.txt  language.txt  lists.txt  logging.txt  make.bat  mappingrule.txt  miscellaneous.txt  monitor_classes.txt  natlink_engine.txt  object_model.txt  objectmodel.txt  project.txt  recobs.txt  related_resources.txt  (+22 more)
dragonfly/: __init__.py  __main__.py  _platform_checks.py  all.py  config.py  error.py  loader.py  log.py  os_dependent_mock.py  parser.py  test.py  test_parser.py  timer.py
dragonfly/accessibility/: __init__.py  atspi.py  base.py  controller.py  ia2.py  utils.py
dragonfly/actions/: .keyboard.py.swp  __init__.py  _generate_typeables.py  _test_playsound.py  _test_startapp.py  _test_x11_text_key.py  action_base.py  action_base_keyboard.py  action_cmd.py  action_context.py  action_focuswindow.py  action_function.py  action_key.py  action_mimic.py  action_mouse.py  action_paste.py  action_pause.py  action_playback.py  action_playsound.py  action_startapp.py  action_text.py  action_waitwindow.py  actionbase.py  actions.py  keyboard.py  linux_x11.py  natlinkinput.py  pause.py  sendinput.py  typeables.py
dragonfly/documentation/: actionkey.html  actions.html  actions_doctests.html  actiontext.html  clipboard.html  compound.html  context.html  engines.html  features.html  genindex.html  grammar.html  grammarclasses.html  index.html  installation.html  introduction.html  misc.html  modindex.html  objectmodel.html  objects.inv  reference.html  ruleclasses.html  search.html  searchindex.js  searchindex.json  tests.html  tests_actions_doctest.html  tests_elements_basic_doctest.html  tests_recobs_doctest.html  windows.html
dragonfly/engines/: __init__.py  compiler_base.py  compiler_natlink.py  compiler_sapi5.py  dictation_base.py  dictation_natlink.py  dictation_sapi5.py  engine.py  engine_base.py  engine_natlink.py  engine_sapi5.py  recobs_base.py  recobs_natlink.py  test_engine.py
dragonfly/examples/: _engine_control_example.py  _fruit_toggle.py  _functions_example.py  _notepad_example.py  _notepad_foodgroups.py  _outlook_example.py  _sphinx_engine_example.py  _variable_list_example.py  _window_movement_example.py  _windows_drive_example.py  dragonfly-main.py  (+17 more)
dragonfly2jsgf/: __init__.py  dragonfly2jsgf.py  jsgf_extensions.py  test_dragonfly2jsgf.py
examples/: notepad_example.py
grammar/: compiler.py  context.py  elements_basic.py  elements_compound.py  grammar.py  integer_base.py  integer_en.py  list.py  natlinkmain.py  rule.py  state.py  wordinfo.py
jsgf/: __init__.py  dragonfly2jsgf.py  dragonfly2jsgf_test.py  expansion_test.py  expansions.py  grammar.py  grammar_test.py  rule_test.py  rules.py
stream/: receiver.py  sender.py  test.py
windows/: rectangle.py
(+282 files in other folders)
